# amr2h5

./: .gitignore  setup.cfg
amr2h5/: __init__.py  converter.py  reader.py
test/: tests.py
test/assets/plotfile/Level_0/: Cell_D_00001  Cell_D_00002  Cell_D_00003  Cell_D_00004  Cell_D_00005  Cell_D_00006  Cell_D_00007  Cell_D_00008  Cell_D_00009  Cell_D_00010  Cell_D_00011  Cell_D_00012  Cell_D_00013  Cell_D_00014  Cell_D_00015  Cell_D_00016  Cell_D_00017  Cell_D_00018  Cell_D_00019  Cell_D_00020  Cell_D_00021  Cell_D_00022  Cell_D_00023  Cell_D_00024  Cell_D_00025  Cell_D_00026  Cell_D_00027  Cell_D_00028  Cell_D_00029  Cell_D_00030  Cell_D_00031  Cell_D_00032  Cell_D_00033  Cell_D_00034  Cell_D_00035  Cell_D_00036  Cell_D_00037  Cell_D_00038  Cell_D_00039  Cell_D_00040  (+80 more)
test/assets/plotfile/Level_1/: Cell_D_00000  Cell_D_00002  Cell_D_00003  Cell_D_00004  Cell_D_00005  Cell_D_00006  Cell_D_00008  Cell_D_00009  Cell_D_00011  Cell_D_00012  Cell_D_00013  Cell_D_00014  Cell_D_00015  Cell_D_00016  Cell_D_00018  Cell_D_00019  Cell_D_00020  Cell_D_00021  Cell_D_00022  Cell_D_00023  Cell_D_00024  Cell_D_00025  Cell_D_00026  Cell_D_00027  Cell_D_00029  Cell_D_00030  Cell_D_00031  Cell_D_00032  Cell_D_00034  Cell_D_00035  Cell_D_00036  Cell_D_00037  Cell_D_00038  Cell_D_00041  Cell_D_00043  Cell_D_00044  Cell_D_00045  Cell_D_00046  Cell_D_00047  Cell_D_00048  (+92 more)
test/assets/plotfile/Level_2/: Cell_D_00000  Cell_D_00001  Cell_D_00002  Cell_D_00003  Cell_D_00006  Cell_D_00007  Cell_D_00008  Cell_D_00009  Cell_D_00010  Cell_D_00011  Cell_D_00012  Cell_D_00013  Cell_D_00014  (+140 more)
